# MJava-Rust

./: Cargo.toml  README.md  TokenOut.txt  test.java
src/: .scanner.rs.swp  dictionary.rs  main.rs  scanner.rs  token.rs
