[package]
name = "MJava-Rust"
description = "A MJava Compiler front-end implemented by Rust"
version = "0.1.0"
authors = ["Li Taiji <496289688@qq.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
